Sat Nov 29 22:04:10 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/odbc/odbc.c 
	- applied 2-line  patch from nj-freetds@talbott.ws
	- Cf. 25 Nov 2003, "ODBC SQLExecute succeeds when it shouldn't"
	
Fri Nov 28 17:52:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: updated to 0.62 version
	* include/tds.h src/tds/mem.c src/tds/query.c:
	* src/tds/token.c:
	- fix for Sybase and prepare using blobs
	  (emulate prepared statements)

Tue Nov 25 16:41:13 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/tds/login.c:
	- enable TCP_NODELAY options in socket

Mon Nov 24 21:18:50 EST 2003	JK Lowden <jklowden@schemamania.org>
	* configure.in provide --disable-odbc override, and minor edits.
	
Mon Nov 24 22:09:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: better detect for ODBC

Mon Nov 24 20:57:18 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/iconv.c:
	- cleanup and comments
	- small iconv fixes

Sun Nov 23 22:09:31 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/write.c s/eilseq/einval/ 
	* src/tds/query.c fixed warning
	
Sun Nov 23 10:12:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/read.c:
	- small fixes for iconv

Sun Nov 23 09:57:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/tds/query.c:
	- use iconv for input parameters

Sat Nov 22 17:59:36 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/cspublic.h
	* src/ctlib/cs.c src/ctlib/ct.c
	* src/tds/convert.c src/tds/token.c
	- SYBUNIVARCHAR handling
	
Sat Nov 22 17:49:12 EST 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h
	* src/tds/iconv.c src/tds/login.c src/tds/query.c
	* src/tds/read.c src/tds/write.c
	- Add message suppression to TDSICONVINFO. utf_[12] unit tests now pass.  
	* src/server/login.c move tds_iconv() call out of assert.  
	
Sat Nov 22 18:16:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>